--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,20 @@ body {
 .bg-blue {
   background: #6c63ff;
 }
+
+@media (min-width: 1300px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 1200px;
+  }
+}
+
+/* .container{
+  max-width: 90%;
+} */
 .headerWrapper .top-strip {
   padding: 8px 0px;
 }
@@ -31,7 +45,7 @@ body {
   height: 60px;
   min-width: 150px;
   color: black !important;
-  border: 1px solid #f15f1d;
+  border: 1px solid #6c63ff;
   padding: 10px 15px;
   border-radius: 16px;
 }
@@ -50,16 +64,16 @@ body {
 .headerWrapper .header .part2 .countryDropdown span.ml-auto svg {
   opacity: 0.7;
 }
-.header .headerSearchBar {
+ .headerSearchBar {
   width: 60%;
   height: 60px;
-  background: #f3f4f7 ;
+  background: #f3f4f7;
   padding: 10px;
   position: relative;
   border-radius: 16px;
-  border: 1px solid #f15f1d;
+  border: 1px solid #6c63ff;
 }
-.header .headerSearchBar input {
+ .headerSearchBar input {
   background: transparent !important;
   outline: none !important;
   width: 100%;
@@ -69,7 +83,7 @@ body {
   font-size: 14px;
   color: #000;
 }
-.header .headerSearchBar button {
+ .headerSearchBar button {
   position: absolute;
   top: 10px;
   right: 15px;
@@ -80,6 +94,96 @@ body {
   border-radius: 50% !important;
   color: #000;
 }
-.header .headerSearchBar button svg {
+ .headerSearchBar button svg {
   font-size: 20px;
+}
+
+header .part3 .circle {
+  align-items: center;
+  justify-content: center;
+  min-width: 45px !important;
+  height: 45px !important;
+  width: 45px !important;
+  border-radius: 50% !important;
+  color: #000;
+  border: 1px solid #6c63ff !important;
+}
+header .part3 .circle svg {
+  font-size: 20px;
+}
+.cartTab .price {
+  font-size: 18px;
+  color: #000;
+  font-weight: 700;
+}
+.cartTab button {
+  background: #ffffff !important;
+}
+.cartTab button svg {
+  color: #020202 !important;
+}
+.cartTab .count {
+  font-size: 14px;
+  position: absolute;
+  top: -6px;
+  right: -4px;
+  background: #f15f1d;
+  border-radius: 50%;
+  color: #fff;
+  width: 20px;
+  height: 20px;
+}
+.locationModal .Multipaper-elavation{
+  padding: 25px;
+}
+nav .navPart1{
+  max-width: 20%;
+  flex: 0 0 20%;
+}
+nav .navPart2{
+  max-width: 80%;
+  flex: 0 0 80%;
+}
+nav .allCategories {
+  background: #f15f1d;
+  padding: 8px 20px !important;
+  border-radius: 25px !important;
+}
+nav .allCategories * {
+  color: #fff;
+}
+nav .allCategories:hover {
+  background: #6c63ff;
+}
+nav .allCategories .text {
+  font-weight: 600;
+  font-size: 12px;
+}
+nav .allCategories .iconList svg {
+  font-size: 20px !important;
+}
+nav .allCategories .iconDrop svg {
+  font-size: 20px !important;
+}
+nav .navPart2 ul{
+  margin-bottom: 0px;
+}
+nav .navPart2 ul li a{
+  font-size: 15px;
+  font-weight: 500;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.7);
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  transition: all 0.3s ease-in-out;
+  border-radius: 25px;
+}
+nav .navPart2 ul li a svg {
+  font-size: 18px;
+}
+nav .navPart2 ul li a:hover{
+  background: #6c63ff;
+  color: #ffffff;
 }
