--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@ body {
 /* .container{
   max-width: 90%;
 } */
+.headerWrapper {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 10px;
+}
 .headerWrapper .top-strip {
   padding: 8px 0px;
 }
