--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,6 @@ body {
 } */
 .headerWrapper {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding-bottom: 10px;
 }
 .headerWrapper .top-strip {
   padding: 8px 0px;
@@ -195,6 +194,41 @@ nav .navPart2{
   max-width: 80%;
   flex: 0 0 80%;
 }
+nav .navPart1 .catWrapper{
+  position: relative;
+}
+nav .navPart1 .catWrapper .sidebarNav{
+  width: 100%;
+  height: 0px;
+  opacity: 0;
+  background: #fff;
+  position: absolute;
+  top: 136%;
+  left: 0px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 15px 0px;
+  transition: all 0.2s;
+  visibility: hidden;
+}
+nav .navPart1 .catWrapper .sidebarNav.open{
+  height: auto;
+  opacity: 1;
+  visibility: inherit;
+}
+nav .navPart1 .catWrapper .sidebarNav ul li{
+  width: 100%;
+  list-style: none;
+  padding: 0px 15px;
+}
+nav .navPart1 .catWrapper .sidebarNav ul li button{
+  color: #000;
+  width: 100%;
+  justify-content: flex-start;
+  text-transform: capitalize !important;
+}
+nav .navPart1 .catWrapper .sidebarNav ul li button:hover{
+  background: transparent !important;
+}
 nav .allCategories {
   background: #f15f1d;
   padding: 8px 20px !important;
@@ -230,7 +264,7 @@ nav .navPart2 ul li a button{
   text-transform: uppercase;
   display: flex;
   align-items: center;
-  padding: 10px 15px;
+  padding: 15px 15px;
   transition: all 0.3s ease-in-out;
   border-radius: 25px;
 }
@@ -238,6 +272,38 @@ nav .navPart2 ul li a svg {
   font-size: 18px;
 }
 nav .navPart2 ul li a:hover{
-  background: #6c63ff;
+  /* background: #6c63ff; */
   color: #ffffff;
+}
+nav .navPart2 ul li {
+  position: relative;
+}
+nav .navPart2 ul li .subMenu{
+  position: absolute;
+  top: 150%;
+  left: 0px;
+  min-width: 200px;
+  background: #fff;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s ease-in-out;
+}
+nav .navPart2 ul li .subMenu a{
+  display: block;
+  width: 100%;
+}
+nav .navPart2 ul li .subMenu a button{
+  width: 100%;
+  justify-content: flex-start !important;
+  border-radius: 0px !important;
+  text-transform: capitalize !important;
+  font-weight: 600 !important;
+}
+nav .navPart2 ul li .subMenu a button:hover{
+  background: #f1f1f1 !important;
+}
+nav .navPart2 ul li:hover .subMenu{
+  opacity: 1;
+  visibility: inherit;
+  top: 100%;
 }
